--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
-body{
-  background-color: #f0f0f0;  
+body {
+    background-color: #f0f0f0;
 }
-header{
-background-color:black;
-color:white
-padding: 10px;
-margin: 0px;
-}
-section {
-background-color: white;
-padding: 5px;
-margin-top: 10px;
-}
-footer{
+
+header {
     background-color: black;
-    color:white
-    padding: 10px;
+    color: white padding: 10px;
+    margin: 0px;
+}
+
+section {
+    background-color: white;
+    padding: 5px;
     margin-top: 10px;
-    text-align:center
+}
+
+footer {
+    background-color: black;
+    color: white padding: 10px;
+    margin-top: 10px;
+    text-align: center
 }
