--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
 
 header {
     background-color: black;
-    color: white padding: 10px;
+    color: white;
+    padding: 10px;
     margin: 0px;
 }
 
