--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ section {
 
 footer {
     background-color: black;
-    color: white padding: 10px;
+    color: white; 
+    padding: 10px;
     margin-top: 10px;
     text-align: center
 }
