--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #f0f0f0;
+    margin:0px;
 }
 
 header {
@@ -7,6 +8,7 @@ header {
     color: white;
     padding: 10px;
     margin: 0px;
+    padding-top: 30px;
 }
 
 section {
